--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         <p>Freelance : <span>Available</span></p>
                                      </div>
                                      <div class="info-item padd-15">
-                                        <p>Website : <span>www.ayoubdriri.com</span></p>
+                                        <p>Website : <span>www.ayoubdev7.io</span></p>
                                      </div>
                                      <div class="info-item padd-15">
                                         <p>Degree : <span>Technician in IT Development</span></p>
@@ -446,7 +446,7 @@
                          <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                             <h4>Website</h4>
-                            <p>www.ayoubdriri.com</p>
+                      <p><a href="https://ayyoubdev7.github.io/ayoubdev7/" target="_blank">www.ayoubdev7.io</a></p>
                         </div>
                         <!--==Contact Info Item End==-->
                     </div>
